--- a/index.html
+++ b/index.html
@@ -3447,7 +3447,7 @@ submitted to ICML 2020.</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">105. Three papers 
 submitted to IJCAI 2020.</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">104. Xia Li, Yibo Yang, Qijie Zhao, Tiancheng Shen, <u>Zhouchen Lin</u>, and Hong Liu, Spatial Pyramid Based Graph Reasoning for Semantic Segmentation, CVPR 2020. [<a href="Publications/2020-CVPR-SpyGR.pdf">pdf</a>]</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">104. Xia Li, Yibo Yang, Qijie Zhao, Tiancheng Shen, <u>Zhouchen Lin</u>, and Hong Liu, <em>Spatial Pyramid Based Graph Reasoning for Semantic Segmentation</em>, CVPR 2020. [<a href="Publications/2020-CVPR-SpyGR.pdf">pdf</a>]</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">103. Yueying Kao, Weiming Li, QiangWang, <u>Zhouchen Lin</u>, Wooshik Kim, and Sunghoon Hong, <em>Synthetic Depth Transfer for Monocular 3D Object Pose Estimation in the Wild</em>, AAAI 2020. [<a href="https://zhouchenlin.github.io/Publications/2020-AAAI-SDT.pdf">pdf</a>] </span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4285,17 +4285,17 @@ and Implementations of Matrix Reconstruction</a> (in Chinese).
  Risheng Liu, from Dalian University of Technology, Ph.D. in 
 2012.</span></span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p></o:p></span></p>
 <p>4. Li Yang, Ph.D. in 2014.</p>
-<p>4. Zhenyu Zhao, Ph.D. in 2015.</p>
-4. Hongyang Zhang, Master in 2015.
-<p>5. Chenyan Bai and Yuqing Hou, Ph.D. in 2016.</p>
-<p>5. Pan Zhou, Geng Zhang and Lei Li, Master in 2016. </p>
-<p>7. Canyi Lu, Jia Li and Yang Lin, Ph.D. in 2017.</p>
-<p>6. Yaoquan Hu, Bin Hao and Shanzi Lu, Master in 2017.</p>
-<p>8. Chen Xu, Ph.D. in 2018. </p>
-<p>9. Feng Cheng and Yameng Huang, Master in 2018.</p>
-<p>10. Gaopeng Jian, PostDoc in 2019.</p>
-<p>11. Huan Li, Cong Fang, and Jian Long Wu, Ph.D. in 2019.</p>
-<p>12. Zhisheng Zhong, Han Yan, Yu Xia, and Ming Yin, Master in 2019.</p>
+<p>5. Zhenyu Zhao, Ph.D. in 2015.</p>
+<p>6. Hongyang Zhang, Master in 2015.</p>
+<p>7. Chenyan Bai and Yuqing Hou, Ph.D. in 2016.</p>
+<p>8. Pan Zhou, Geng Zhang and Lei Li, Master in 2016. </p>
+<p>9. Canyi Lu, Jia Li and Yang Lin, Ph.D. in 2017.</p>
+<p>10. Yaoquan Hu, Bin Hao and Shanzi Lu, Master in 2017.</p>
+<p>11. Chen Xu, Ph.D. in 2018. </p>
+<p>12. Feng Cheng and Yameng Huang, Master in 2018.</p>
+<p>13. Gaopeng Jian, PostDoc in 2019.</p>
+<p>14. Huan Li, Cong Fang, and Jian Long Wu, Ph.D. in 2019.</p>
+<p>15. Zhisheng Zhong, Han Yan, Yu Xia, and Ming Yin, Master in 2019.</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Keynote 
   Speeches:<o:p></o:p></span></u></b></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1. Low Rank
