--- a/index.html
+++ b/index.html
@@ -2594,9 +2594,9 @@ reference book</a>). Welcome to send me (zlin (at) <span class="GramE">pku</span
       <p class="WordSection1">1. <a href="https://zhouchenlin.github.io/Recruitment.htm">My 
       group is<span class="STYLE26"> recruiting </span>tenure-track 
       faculties</a> and PostDocs (<a href="https://zhouchenlin.github.io/Academic.htm">academic</a> 
-      or <a href="https://zhouchenlin.github.io/Radiawave.htm">industrial</a>). 
+      (annual salary ~USD40K) or <a href="https://zhouchenlin.github.io/Radiawave.htm">industrial</a>). 
       <a href="https://zhouchenlin.github.io/Recruitment%20at%20Zhijiang%20LAB.htm">My 
-      lab at Zhejiang LAB is also recruiting</a> Researchers and PostDocs. <a href="https://zhouchenlin.github.io/Recruitment%20at%20Samsung%20AI%20Lab.htm">Samsung 
+      lab at Zhejiang LAB is also recruiting</a> Researchers and PostDocs. Beijing Academy of Artificial Intelligence is also recruiting <a href="https|//mp.weixin.qq.com/s/Xc90PkrLUSUE03GhIflQcA">PostDocs</a> in machine learning (annual salary USD70K+)! <a href="https://zhouchenlin.github.io/Recruitment%20at%20Samsung%20AI%20Lab.htm">Samsung 
       AI Lab is also recruiting</a> top-caliber researchers with strong 
       expertise in machine learning! </p></td>
     <td width="164" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td></tr>
@@ -2772,7 +2772,14 @@ Recognition   <o:p></o:p>
 Scholar Citations</a>][<a href="https://cc.glgoo.top/citations?hl=zh-CN&user=TanjFwoAAAAJ&view_op=list_works">Mirror of Google Scholar</a>][<a href="https://dblp.uni-trier.de/pers/hd/l/Lin:Zhouchen">dblp</a>] 
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Book 
-Chapters:<o:p></o:p></span></u></b></p>
+Edited:</span></u></b></p>
+<p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">
+  <o:p></o:p>
+</span></u></b><u>Zhouchen Lin</u>, Liang Wang, Jian Yang, Guangming Shi, Tieniu Tan, Nanning Zheng, Xilin Chen, Yanning Zhang: <a href="https://www.springer.com/gp/book/9783030316532">Proceedings of Pattern Recognition and Computer Vision - Second Chinese Conference</a>, PRCV 2019, Xi'an, China, November 8-11, 2019, Part I-III. Lecture Notes in Computer Science 11857-11857, Springer 2019.</p>
+<p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Book 
+  Chapters:
+  <o:p></o:p>
+</span></u></b></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1. Liang Wan 
 and <u>Zhouchen Lin</u>, <i style="mso-bidi-font-style: normal;">Signature 
 Sample Synthesis</i>, Encyclopedia of Biometrics (Stan Z. Li (Ed.)), pp. 
@@ -2810,6 +2817,12 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">123. Xiaoqin Zhang, Jingjing Zheng, Di Wang, Guiying Tang, Zhengyuan Zhou, and <u>Zhouchen Lin</u>, <em>Structural Sparsity Optimization with Non-Convex Surrogates: A Unified Algorithmic Framework</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">122. Xinbang Zhang, Jianlong Chang, Yiwen Guo, Gaofeng Meng, <u>Zhouchen Lin</u>, Shiming Xiang, and Chunhong Pan, <em>DATA: Differentiable ArchiTecture Approximation with Distribution Guided Sampling</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">121. Zhengyang Shen, Yibo Yang, <u>Zhouchen Lin</u>, and Jinwen Ma, <em>Newton Design: Designing CNNs with the Family of Newton’s Methods</em>, submitted to IEEE Trans. Neural Networks and Learning Systems. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">120. Risheng Liu,  Zhu Liu, Pan Mu, <u>Zhouchen Lin</u>, Xin Fan, Zhongxuan Luo, <em>Investigating Image Propagations from Optimization Perspective: Modules, Control Mechanisms and Applications</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">119. Huan Li, Cong Fang, Wotao Yin, and <u>Zhouchen Lin</u>, <em>A Sharp Convergence Rate Analysis for Distributed Accelerated Gradient</em>, submitted to IEEE Transactions on Signal Processing.</span></p>
@@ -2866,22 +2879,22 @@ Optimization</em>, submitted to SIAM J. Optimization. </span></p>
   Zhou,  Canyi Lu, Jiashi Feng, <u>Zhouchen Lin</u>,  and Shuicheng Yan, <em>Tensor Low-rank Representation for Data Recovery and Clustering</em>, 
   IEEE Trans. Pattern Analysis and Machine Intelligence</span>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">accepted. [<a href="Publications/2020-TPAMI-TLRR.pdf">pdf</a>] </span></span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12"></span><span class="STYLE12">105. Huan Li and <u>Zhouchen Lin</u>, <em>On 
-the Complexity Analysis of the Primal Solutions for the Accelerated Randomized 
-Dual Coordinate Ascent</em>, Journal of Machine Learning 
-Research, accepted. [<a href="Publications/2020-JMLR-Complexity.pdf">pdf</a>]</span></p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">104. <u>Zhouchen Lin</u>, <em>How Can Machine Learning and Optimization Help Each Other Better? </em>Journal of the Operations Research Society of China, accepted. [<a href="Publications/2019-ML&Opt.pdf">pdf</a>]</span></p>
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">105. <u>Zhouchen Lin</u>, <em>How Can Machine Learning and Optimization Help Each Other Better? </em>Journal of the Operations Research Society of China, accepted. [<a href="Publications/2019-ML&Opt.pdf">pdf</a>]</span></p>
 <p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">103. Risheng Liu, Shichao Cheng, Yi He, Xin Fan, <u>Zhouchen Lin</u>, and Zhongxuan Luo, <em>On the Convergence of Learning-Based Interative Methods for Nonconvex Inverse Problems, </em>IEEE Trans. Pattern Analysis and Machine Intelligence, accepted.</span><span class="STYLE12"> [<a href="https://zhouchenlin.github.io/Publications/2019-TPAMI-FIMA.pdf">pdf</a>] 
+<p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">104. Risheng Liu, Shichao Cheng, Yi He, Xin Fan, <u>Zhouchen Lin</u>, and Zhongxuan Luo, <em>On the Convergence of Learning-Based Interative Methods for Nonconvex Inverse Problems, </em>IEEE Trans. Pattern Analysis and Machine Intelligence, accepted.</span><span class="STYLE12"> [<a href="https://zhouchenlin.github.io/Publications/2019-TPAMI-FIMA.pdf">pdf</a>] 
 </span></p>
 <p class="MsoNormal1231177" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231175" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">102. Canyi Lu, 
+<p class="MsoNormal1231175" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">103. Canyi Lu, 
   Jiashi Feng, Yudong Chen, Wei Liu, <u>Zhouchen Lin</u>, Aswin 
   Sankaranarayanan,<span class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"> and</span> Shuicheng Yan, <em>Tensor Robust Principal Component Analysis with A 
     New Tensor Nuclear Norm</em>, IEEE Trans. Pattern Analysis and Machine 
   Intelligence, accepted. [<a href="https://zhouchenlin.github.io/Publications/2019-TPAMI-TRPCA.pdf">pdf</a>]</span></p>
 <p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">102. Huan Li and <u>Zhouchen Lin</u>, <em>On 
+  the Complexity Analysis of the Primal Solutions for the Accelerated Randomized 
+  Dual Coordinate Ascent</em>, Journal of Machine Learning 
+  Research, 21(33):1−45, 2020. [<a href="Publications/2020-JMLR-Complexity.pdf">pdf</a>]</span></p>
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">101. 熊红凯、戴文睿、林宙辰、吴飞、于俊清、申扬眉、徐明星，多媒体信号处理的数学理论前沿进展（in Chinese），中国图象图形学报，25(1):1-18, 2020. [<a href="Publications/2019-JIG-MM.pdf">pdf</a>]</span></p>
 <p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231178" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">100. Yinwei Wei, Xiang Wang, Liqiang Nie, <u>Zhouchen Lin</u>, and Baoquan Chen, <em></em>Neural Multimodal Cooperative 
@@ -4602,7 +4615,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Mar. 5, 2020. Number of visitors since March 1, 2010:     
+was last updated on Mar. 10, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
