--- a/index.html
+++ b/index.html
@@ -2771,11 +2771,14 @@ Recognition   <o:p></o:p>
 </span> [<a href="http://scholar.google.com.hk/citations?user=TanjFwoAAAAJ&amp;hl=en">Google 
 Scholar Citations</a>][<a href="https://cc.glgoo.top/citations?hl=zh-CN&user=TanjFwoAAAAJ&view_op=list_works">Mirror of Google Scholar</a>][<a href="https://dblp.uni-trier.de/pers/hd/l/Lin:Zhouchen">dblp</a>] 
 </p>
-<p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Book 
+<p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Books 
 Edited:</span></u></b></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">
   <o:p></o:p>
 </span></u></b><u>Zhouchen Lin</u>, Liang Wang, Jian Yang, Guangming Shi, Tieniu Tan, Nanning Zheng, Xilin Chen, Yanning Zhang: <a href="https://www.springer.com/gp/book/9783030316532">Proceedings of Pattern Recognition and Computer Vision - Second Chinese Conference</a>, PRCV 2019, Xi'an, China, November 8-11, 2019, Part I-III. Lecture Notes in Computer Science 11857-11857, Springer 2019.</p>
+<p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Books:</span></u></b></p>
+<p>1. <u>Zhouchen Lin</u>, Huan Li, and Cong Fang, <em>Accelerated Optimization in Machine Learning: First-Order Algorithms</em>, Springer, 2020.</p>
+<p>2. <u>Zhouchen Lin</u> and Hongyang Zhang, <em>Low-Rank Models in Visual Analysis: Theories, Algorithms, and Applications</em>, Academic Press, 2017. </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Book 
   Chapters:
   <o:p></o:p>
@@ -4235,7 +4238,8 @@ Photogrammetric Engineering and Remote Sensing, </span><span style="mso-ascii-fo
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">19. 
 Reviewers/Chairs to Conferences:   <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  CVPR 2021 
-(<strong>Area Chair</strong>), ICPR 2020 (<strong>Track Chair</strong>), ICML 2020 (<strong>Area Chair</strong>), IJCAI 2020 (<strong>Area Chair</strong>), CVPR 2020 
+(<strong>Area Chair</strong>), NIPS 
+2020 (<strong>Area Chair</strong>), ICPR 2020 (<strong>Track Chair</strong>), ICML 2020 (<strong>Area Chair</strong>), IJCAI 2020 (<strong>Area Chair</strong>), CVPR 2020 
 (<strong>Area Chair</strong>), AAAI 2020 (<strong>Area Chair</strong>), NIPS 
 2019 (<strong>Area Chair</strong>), ACML 2019 (<strong>Area Chair</strong>),  
 IJCAI 2019 (<strong>Senior Program Committee</strong>), PRCV 2019 
@@ -4615,7 +4619,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Mar. 10, 2020. Number of visitors since March 1, 2010:     
+was last updated on Mar. 11, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
