--- a/index.html
+++ b/index.html
@@ -2606,7 +2606,7 @@ reference book</a>). Welcome to send me (zlin (at) <span class="GramE">pku</span
     </tr>
   <tr align="left">
     <td height="78">
-      <p class="WordSection1">3. I was invited to be area chairs of  ICML 2020, IJCAI 2020, and CVPR 2021!</p></td>
+      <p class="WordSection1">3. I was invited to be area chairs of  ICML 2020, IJCAI 2020, NIPS 2020, and CVPR 2021!</p></td>
     </tr>
   <tr align="left">
     <td height="73">
