--- a/index.html
+++ b/index.html
@@ -2820,6 +2820,8 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">124. Jianlong Wu, Xingyu Xie, Liqiang Nie, <u>Zhouchen Lin</u>, and Hongbin Zha, <em>Reconstruction Regularized Low-Rank Subspace Learning for Cross-Modal Retrieval</em>, submitted to Pattern Recognition.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">123. Xiaoqin Zhang, Jingjing Zheng, Di Wang, Guiying Tang, Zhengyuan Zhou, and <u>Zhouchen Lin</u>, <em>Structural Sparsity Optimization with Non-Convex Surrogates: A Unified Algorithmic Framework</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">122. Xinbang Zhang, Jianlong Chang, Yiwen Guo, Gaofeng Meng, <u>Zhouchen Lin</u>, Shiming Xiang, and Chunhong Pan, <em>DATA: Differentiable ArchiTecture Approximation with Distribution Guided Sampling</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></p>
@@ -4619,7 +4621,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Mar. 11, 2020. Number of visitors since March 1, 2010:     
+was last updated on Mar. 12, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
