--- a/index.html
+++ b/index.html
@@ -2777,8 +2777,8 @@ Edited:</span></u></b></p>
   <o:p></o:p>
 </span></u></b><u>Zhouchen Lin</u>, Liang Wang, Jian Yang, Guangming Shi, Tieniu Tan, Nanning Zheng, Xilin Chen, Yanning Zhang: <a href="https://www.springer.com/gp/book/9783030316532">Proceedings of Pattern Recognition and Computer Vision - Second Chinese Conference</a>, PRCV 2019, Xi'an, China, November 8-11, 2019, Part I-III. Lecture Notes in Computer Science 11857-11857, Springer 2019.</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Books:</span></u></b></p>
-<p>1. <u>Zhouchen Lin</u>, Huan Li, and Cong Fang, <em>Accelerated Optimization in Machine Learning: First-Order Algorithms</em>, Springer, 2020.</p>
-<p>2. <u>Zhouchen Lin</u> and Hongyang Zhang, <em>Low-Rank Models in Visual Analysis: Theories, Algorithms, and Applications</em>, Academic Press, 2017. </p>
+<p>1. <u>Zhouchen Lin</u>, Huan Li, and Cong Fang, <em><a href="https://www.amazon.com/Accelerated-Optimization-Machine-Learning-First-Order/dp/9811529094/ref=sr_1_1?keywords=Accelerated+Optimization+in+Machine+Learning%3A+First-Order+Algorithms&qid=1584055798&sr=8-1">Accelerated Optimization in Machine Learning: First-Order Algorithms</a></em>, Springer, 2020.</p>
+<p>2. <u>Zhouchen Lin</u> and Hongyang Zhang, <em><a href="https://www.amazon.com/Low-Rank-Models-Visual-Analysis-Applications/dp/B074RBTBG9/ref=sr_1_1?keywords=Low-Rank+Models+in+Visual+Analysis%3A+Theories%2C+Algorithms%2C+and+Applications&qid=1584055721&sr=8-1">Low-Rank Models in Visual Analysis: Theories, Algorithms, and Applications</a></em>, Academic Press, 2017. </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Book 
   Chapters:
   <o:p></o:p>
@@ -2820,6 +2820,8 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">125. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: A New Data Dependent Tensor Rank</em>, submitted to IEEE Trans. Neural Networks and Learning Systems.</span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">124. Jianlong Wu, Xingyu Xie, Liqiang Nie, <u>Zhouchen Lin</u>, and Hongbin Zha, <em>Reconstruction Regularized Low-Rank Subspace Learning for Cross-Modal Retrieval</em>, submitted to Pattern Recognition.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">123. Xiaoqin Zhang, Jingjing Zheng, Di Wang, Guiying Tang, Zhengyuan Zhou, and <u>Zhouchen Lin</u>, <em>Structural Sparsity Optimization with Non-Convex Surrogates: A Unified Algorithmic Framework</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
@@ -4621,7 +4623,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Mar. 12, 2020. Number of visitors since March 1, 2010:     
+was last updated on Mar. 13, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
