--- a/index.html
+++ b/index.html
@@ -2820,6 +2820,8 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">126. Xingyu Xie, Jianlong Wu, Guangcan Liu, and <u>Zhouchen Lin</u>, <em>SSCNet: Learning-based Subspace Clustering</em>, submitted to IEEE Trans. Neural Networks and Learning Systems. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">125. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: A New Data Dependent Tensor Rank</em>, submitted to IEEE Trans. Neural Networks and Learning Systems.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">124. Jianlong Wu, Xingyu Xie, Liqiang Nie, <u>Zhouchen Lin</u>, and Hongbin Zha, <em>Reconstruction Regularized Low-Rank Subspace Learning for Cross-Modal Retrieval</em>, submitted to Pattern Recognition.</span></p>
