--- a/index.html
+++ b/index.html
@@ -4183,6 +4183,7 @@ granted)</span></p>
 <p>14. (202010081532.8) 数据密度估计及回归方法、相应装置、电子设备、介质[三星]</p>
 <p>15. (202010080441.2) 神经网络模型的训练方法和装置[三星]</p>
 <p>16. (202010080428.7) 神经网络模型的训练方法和装置[三星]</p>
+<p>17. (202010189225.1) 一种基于偏微分算子的等变卷积网络模型的图像分类方法</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
 Activities:   <o:p></o:p> </span></u></b></p>
 <p>1. Fellow of Institute of Electrical and Electronics Engineers (IEEE), grade 
@@ -4625,7 +4626,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Mar. 13, 2020. Number of visitors since March 1, 2010:     
+was last updated on Mar. 18, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
