--- a/index.html
+++ b/index.html
@@ -2606,7 +2606,7 @@ reference book</a>). Welcome to send me (zlin (at) <span class="GramE">pku</span
     </tr>
   <tr align="left">
     <td height="78">
-      <p class="WordSection1">3. I was invited to be area chairs of  ICML 2020, IJCAI 2020, NIPS 2020, and CVPR 2021!</p></td>
+      <p class="WordSection1">3. I was invited to be area chairs of  ACML 2020, ICML 2020, IJCAI 2020, NIPS 2020, and CVPR 2021!</p></td>
     </tr>
   <tr align="left">
     <td height="73">
@@ -2820,6 +2820,8 @@ International   Mathematics Forum</a>, Higher Education Press, never appear.</sp
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Journal 
 Papers:   <o:p></o:p></span></u></b></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">127. Yibo Yang, Zhengyang Shen, Huan Li, and <u>Zhouchen Lin</u>, <em>Optimization-inspired Neural Architecture Design and Search</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span><span class="STYLE12"> </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">126. Xingyu Xie, Jianlong Wu, Guangcan Liu, and <u>Zhouchen Lin</u>, <em>SSCNet: Learning-based Subspace Clustering</em>, submitted to IEEE Trans. Neural Networks and Learning Systems. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">125. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: A New Data Dependent Tensor Rank</em>, submitted to IEEE Trans. Neural Networks and Learning Systems.</span></p>
@@ -4174,7 +4176,7 @@ granted)</span></p>
 <p>2. *(ZL201410084657.0) 基于L1范数全局几何一致性检验的错误匹配检测方法</p>
 <p>3. *(ZL201510888480.4) 一种基于形状交互矩阵的图像错误匹配检验方法</p>
 <p>4. (201710623220.3) 基于维度自适应的Tucker分解的深度网络压缩方法</p>
-<p>5. *(201711007628.4) 基于增广齐次坐标矩阵的图像间错误匹配的检测方法</p>
+<p>5. *(ZL201711007628.4) 基于增广齐次坐标矩阵的图像间错误匹配的检测方法</p>
 <p>6. (201711156691.4) 一种提升邻近算子机神经网络优化方法</p>
 <p>7. (201810958553.6) 一种受优化算法启发的深度神经网络结构设计方法</p>
 <p>8. (201811007566.1) 小波域中基于集团结构子带共同学习超分辨率网络的方法</p>
@@ -4187,6 +4189,7 @@ granted)</span></p>
 <p>15. (202010080441.2) 神经网络模型的训练方法和装置[三星]</p>
 <p>16. (202010080428.7) 神经网络模型的训练方法和装置[三星]</p>
 <p>17. (202010189225.1) 一种基于偏微分算子的等变卷积网络模型的图像分类方法</p>
+<p>18. 基于凸多面体分段线性分类的混合二叉划分树[之江]</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
 Activities:   <o:p></o:p> </span></u></b></p>
 <p>1. Fellow of Institute of Electrical and Electronics Engineers (IEEE), grade 
@@ -4248,7 +4251,7 @@ Photogrammetric Engineering and Remote Sensing, </span><span style="mso-ascii-fo
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">19. 
 Reviewers/Chairs to Conferences:   <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  CVPR 2021 
-(<strong>Area Chair</strong>), NIPS 
+(<strong>Area Chair</strong>), ACML 2020 (<strong>Area Chair</strong>), NIPS 
 2020 (<strong>Area Chair</strong>), ICPR 2020 (<strong>Track Chair</strong>), ICML 2020 (<strong>Area Chair</strong>), IJCAI 2020 (<strong>Area Chair</strong>), CVPR 2020 
 (<strong>Area Chair</strong>), AAAI 2020 (<strong>Area Chair</strong>), NIPS 
 2019 (<strong>Area Chair</strong>), ACML 2019 (<strong>Area Chair</strong>),  
@@ -4629,7 +4632,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Apr. 2, 2020. Number of visitors since March 1, 2010:     
+was last updated on Apr. 3, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
