--- a/index.html
+++ b/index.html
@@ -2896,10 +2896,9 @@ Optimization</em>, submitted to SIAM J. Optimization. </span></p>
 </span></p>
 <p class="MsoNormal1231177" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231175" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">103. Canyi Lu, 
-  Jiashi Feng, Yudong Chen, Wei Liu, <u>Zhouchen Lin</u>, Aswin 
-  Sankaranarayanan,<span class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"> and</span> Shuicheng Yan, <em>Tensor Robust Principal Component Analysis with A 
+  Jiashi Feng, Yudong Chen, Wei Liu, <u>Zhouchen Lin</u>, <span class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">and</span> Shuicheng Yan, <em>Tensor Robust Principal Component Analysis with A 
     New Tensor Nuclear Norm</em>, IEEE Trans. Pattern Analysis and Machine 
-  Intelligence, accepted. [<a href="https://zhouchenlin.github.io/Publications/2019-TPAMI-TRPCA.pdf">pdf</a>]</span></p>
+  Intelligence, 42(4): 925-938 (2020). [<a href="https://zhouchenlin.github.io/Publications/2019-TPAMI-TRPCA.pdf">pdf</a>]</span></p>
 <p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">102. Huan Li and <u>Zhouchen Lin</u>, <em>On 
   the Complexity Analysis of the Primal Solutions for the Accelerated Randomized 
@@ -3462,17 +3461,14 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">108. Two papers 
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">107. Two papers 
 submitted to ECML/PAKDD 2020.</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">107. Four papers 
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">106. Four papers 
   submitted to ECCV 2020.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">106. Thirteen papers 
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">105. Twelve papers 
 submitted to ICML 2020.</span></span></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">105. Three papers 
-submitted to IJCAI 2020.</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">104. Xia Li, Yibo Yang, Qijie Zhao, Tiancheng Shen, <u>Zhouchen Lin</u>, and Hong Liu, <em>Spatial Pyramid Based Graph Reasoning for Semantic Segmentation</em>, CVPR 2020. [<a href="Publications/2020-CVPR-SpyGR.pdf">pdf</a>]</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4189,7 +4185,7 @@ granted)</span></p>
 <p>15. (202010080441.2) 神经网络模型的训练方法和装置[三星]</p>
 <p>16. (202010080428.7) 神经网络模型的训练方法和装置[三星]</p>
 <p>17. (202010189225.1) 一种基于偏微分算子的等变卷积网络模型的图像分类方法</p>
-<p>18. 基于凸多面体分段线性分类的混合二叉划分树[之江]</p>
+<p>18. (202010244367.3) 基于凸多面体分段线性分类的二叉划分树车牌识别方法[之江]</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
 Activities:   <o:p></o:p> </span></u></b></p>
 <p>1. Fellow of Institute of Electrical and Electronics Engineers (IEEE), grade 
@@ -4408,10 +4404,11 @@ Beijing Jiaotong University, Shanghai Jiaotong University<o:p></o:p></span></p>
 </span></span></span><!--[endif]--><span lang="EN-US" style="color: black; font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; mso-themecolor: text1;">How 
 to Write Good Papers [<a href="https://zhouchenlin.github.io/How%20to%20write%20good%20papers.pdf">pdf</a>] 
 [<a href="https://zhouchenlin.github.io/How%20to%20Write%20Good%20Papers%20-%20V2.pdf">version 
-2</a>]   <o:p></o:p> </span> (<a href="https://zhouchenlin.github.io/Check%20List%20before%20Handing%20in%20Your%20Paper.htm">Check 
+2</a>]   <o:p></o:p> 
+</span> (<a href="https://zhouchenlin.github.io/Check%20List%20before%20Handing%20in%20Your%20Paper.htm">Check 
 List before Handing in Your Paper</a>) (recommended English editing tool: <a href="http://www.pigai.org/">http://www.pigai.org/</a>) (<a href="https://zhouchenlin.github.io/How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers.htm">How 
 to Write Good Responses to Reviews of Journal Papers</a>) (<a href="https://zhouchenlin.github.io/How%20to%20Have%20a%20Successful%20Graduate%20Life.pdf">How 
-to have a successful graduate life?</a>) </p>
+to have a successful graduate life?</a>) (<a href="Check List before Handing in Your Thesis.htm">Check List before Handing in Your Chinese Thesis</a>)</p>
 <p><span lang="EN-US" style="color: rgb(166, 166, 166); font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; mso-themecolor: background1; mso-themeshade: 166;">At: 
 Institute of Computing Technologies (Chinese Academy of Sciences) (Apr. 24, 
 2008), Southeast University (May 26, 2008), Nanjing University of Aeronautics 
@@ -4632,7 +4629,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Apr. 3, 2020. Number of visitors since March 1, 2010:     
+was last updated on Apr. 21, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
