--- a/index.html
+++ b/index.html
@@ -4408,7 +4408,7 @@ to Write Good Papers [<a href="https://zhouchenlin.github.io/How%20to%20write%20
 </span> (<a href="https://zhouchenlin.github.io/Check%20List%20before%20Handing%20in%20Your%20Paper.htm">Check 
 List before Handing in Your Paper</a>) (recommended English editing tool: <a href="http://www.pigai.org/">http://www.pigai.org/</a>) (<a href="https://zhouchenlin.github.io/How%20to%20Write%20Good%20Responses%20to%20Reviews%20of%20Journal%20Papers.htm">How 
 to Write Good Responses to Reviews of Journal Papers</a>) (<a href="https://zhouchenlin.github.io/How%20to%20Have%20a%20Successful%20Graduate%20Life.pdf">How 
-to have a successful graduate life?</a>) (<a href="Check List before Handing in Your Thesis.htm">Check List before Handing in Your Chinese Thesis</a>)</p>
+to have a successful graduate life?</a>) (<a href="Check List before Handing in Your Thesis.html">Check List before Handing in Your Chinese Thesis</a>)</p>
 <p><span lang="EN-US" style="color: rgb(166, 166, 166); font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;; mso-themecolor: background1; mso-themeshade: 166;">At: 
 Institute of Computing Technologies (Chinese Academy of Sciences) (Apr. 24, 
 2008), Southeast University (May 26, 2008), Nanjing University of Aeronautics 
