--- a/Check List before Handing in Your Thesis.html
+++ b/Check List before Handing in Your Thesis.html
@@ -19,10 +19,10 @@
   <li>Make sure that the figures are  of high visual quality. Typically they should be in vector mode rather image  mode, unless the figures are pure images. To achieve this, you should output  the figure in EPS or PDF (if you generate them by your own), or use Foxit to  extract the figures and save them in PDF directly (if you adapt for other  papers). </li>
   <li>When referring to figures and  tables, always use figure or table number, rather than &ldquo;如下图&rdquo;. This is  because the position of figures and tables may not be right below the text.</li>
   <li>Make sure that the style of  references is consistent, e.g., names of authors and publications,  capitalization, publication information.</li>
-  <li>Cite frequently.</li>
+  <li>Cite frequently, including in the captions of figures which are adapted from other papers.</li>
   <li>Pay attention to the extra  vertical spaces and try to reduce them to normal distance.</li>
   <li>There should be space before  parentheses.</li>
-  <li>Remove all possible typos and grammatical  errors.</li>
+  <li>Remove all possible typos and grammatical  errors. Cross-check with other classmates.</li>
 </ol>
 <p>&nbsp;</p>
 </body>
