--- a/index.html
+++ b/index.html
@@ -2844,7 +2844,7 @@ Papers:   <o:p></o:p></span></u></b></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">116. Hanyuan Hang, Yuchao Cai, Hanfang Yang, and <u>Zhouchen Lin</u>, <em>Density-based Forest Clustering</em>, submitted to IEEE Trans. Knowledge and Data Engineering.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">115. Huan Li, Cong Fang, and <u>Zhouchen Lin</u>, <em>Accelerated First-Order Optimization Algorithms for Machine Learning</em>, submitted to Proceedings of the IEEE. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">115. Huan Li, Cong Fang, and <u>Zhouchen Lin</u>, <em>Accelerated First-Order Optimization Algorithms for Machine Learning</em>, Proceedings of the IEEE, major revision. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">114. Yuanyuan Liu,  Fanhua Shang, Hongying Liu, 
   Lin Kong, Licheng Jiao, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen Lin</u></span>, 
@@ -2869,23 +2869,22 @@ Lin</u></span>, <em>Model  Decomposition and Acceleration for Quantized Neural
 Network</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">submitted to 
 IEEE Trans. Pattern Analysis and Machine Intelligence, major revision</span>. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">110. Huan Li and <u>Zhouchen Lin</u>, 
-  <em>Revisiting EXTRA for Smooth Distributed Optimization</em>, submitted to SIAM 
-  J. Optimization. </span></p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">109. Huan Li, Cong Fang, WotaoYin, and 
-<u>Zhouchen Lin</u>, <em>Near Optimal Complexities of Distributed Accelerated 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">110. Huan Li, Cong Fang, WotaoYin, and 
+    <u>Zhouchen Lin</u>, <em>Near Optimal Complexities of Distributed Accelerated 
 Gradient Method</em>, submitted to IEEE Trans. Automatic Control.</span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">108. Jianlong Wu, <u>Zhouchen Lin</u>, and 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">109. Jianlong Wu, <u>Zhouchen Lin</u>, and 
 Hongbin Zha, <em>Reconstruction Regularized Cross-Modal Subspace Learning</em>, 
 submitted to IEEE Trans. Multimedia. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">107. Huan Li, Cong 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">108. Huan Li, Cong 
 Fang, and <u>Zhouchen Lin</u>, <em>Convergence Rates Analysis of the Quadratic 
 Penalty Method and Its Applications to Decentralized Distributed 
 Optimization</em>, submitted to SIAM J. Optimization. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">107. Huan Li and <u>Zhouchen Lin</u>, <em>Revisiting EXTRA for Smooth Distributed Optimization</em>, SIAM 
+  J. Optimization, accepted. [<a href="Publications/2020-SIAM-EXTRA.pdf">pdf</a>] </span></p>
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12"></span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">106. <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Pan 
   Zhou,  Canyi Lu, Jiashi Feng, <u>Zhouchen Lin</u>,  and Shuicheng Yan, <em>Tensor Low-rank Representation for Data Recovery and Clustering</em>, 
   IEEE Trans. Pattern Analysis and Machine Intelligence</span>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">accepted. [<a href="Publications/2020-TPAMI-TLRR.pdf">pdf</a>] </span></span></p>
@@ -4629,7 +4628,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Apr. 21, 2020. Number of visitors since March 1, 2010:     
+was last updated on Apr. 30, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
