--- a/index.html
+++ b/index.html
@@ -2769,7 +2769,7 @@ Areas:</span></u></b><b style="mso-bidi-font-weight: normal;"><span lang="EN-US"
 Learning, Numerical Optimization, Computer Vision, Image Processing, Pattern 
 Recognition   <o:p></o:p> 
 </span> [<a href="http://scholar.google.com.hk/citations?user=TanjFwoAAAAJ&amp;hl=en">Google 
-Scholar Citations</a>][<a href="https://cc.glgoo.top/citations?hl=zh-CN&user=TanjFwoAAAAJ&view_op=list_works">Mirror of Google Scholar</a>][<a href="https://dblp.uni-trier.de/pers/hd/l/Lin:Zhouchen">dblp</a>] 
+Scholar Citations</a>][<a href="https://dblp.org/pers/l/Lin:Zhouchen.html">dblp</a>] 
 </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Books 
 Edited:</span></u></b></p>
