--- a/index.html
+++ b/index.html
@@ -2884,7 +2884,7 @@ Optimization</em>, submitted to SIAM J. Optimization. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">107. Huan Li and <u>Zhouchen Lin</u>, <em>Revisiting EXTRA for Smooth Distributed Optimization</em>, SIAM 
   J. Optimization, accepted. [<a href="Publications/2020-SIAM-EXTRA.pdf">pdf</a>] </span></p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12"></span></p>
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">106. <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Pan 
   Zhou,  Canyi Lu, Jiashi Feng, <u>Zhouchen Lin</u>,  and Shuicheng Yan, <em>Tensor Low-rank Representation for Data Recovery and Clustering</em>, 
   IEEE Trans. Pattern Analysis and Machine Intelligence</span>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">accepted. [<a href="Publications/2020-TPAMI-TLRR.pdf">pdf</a>] </span></span></p>
