--- a/index.html
+++ b/index.html
@@ -2830,7 +2830,7 @@ Papers:   <o:p></o:p></span></u></b></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">123. Xiaoqin Zhang, Jingjing Zheng, Di Wang, Guiying Tang, Zhengyuan Zhou, and <u>Zhouchen Lin</u>, <em>Structural Sparsity Optimization with Non-Convex Surrogates: A Unified Algorithmic Framework</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">122. Xinbang Zhang, Jianlong Chang, Yiwen Guo, Gaofeng Meng, <u>Zhouchen Lin</u>, Shiming Xiang, and Chunhong Pan, <em>DATA: Differentiable ArchiTecture Approximation with Distribution Guided Sampling</em>, submitted to IEEE Trans. Pattern Analysis and Machine Intelligence. </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">122. Xinbang Zhang, Jianlong Chang, Yiwen Guo, Gaofeng Meng, <u>Zhouchen Lin</u>, Shiming Xiang, and Chunhong Pan, <em>DATA: Differentiable ArchiTecture Approximation with Distribution Guided Sampling</em>, IEEE Trans. Pattern Analysis and Machine Intelligence, minor revision. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">121. Zhengyang Shen, Yibo Yang, <u>Zhouchen Lin</u>, and Jinwen Ma, <em>Newton Design: Designing CNNs with the Family of Newton’s Methods</em>, submitted to IEEE Trans. Neural Networks and Learning Systems. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -2846,42 +2846,41 @@ Papers:   <o:p></o:p></span></u></b></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">115. Huan Li, Cong Fang, and <u>Zhouchen Lin</u>, <em>Accelerated First-Order Optimization Algorithms for Machine Learning</em>, Proceedings of the IEEE, major revision. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">114. Yuanyuan Liu,  Fanhua Shang, Hongying Liu, 
-  Lin Kong, Licheng Jiao, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen Lin</u></span>, 
-  <em>Accelerated Variance Reduction Stochastic ADMM for Large-Scale Machine 
-    Learning</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">submitted to 
-      IEEE Trans. Pattern Analysis and Machine Intelligence, minor revision</span>.</span></p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">113. Jia Li, Mingqing Xiao, Cong Fang, Yue Dai, 
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">114. Jia Li, Mingqing Xiao, Cong Fang, Yue Dai, 
 Chao Xu, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen 
 Lin</u></span>, <em>Training Deep Neural Networks by Lifted Proximal Operator 
 Machines</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">submitted to 
 IEEE Trans. Pattern Analysis and Machine Intelligence, major revision</span>. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12"></span><span class="STYLE12">112. Ke Sun, 
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12"></span><span class="STYLE12">113. Ke Sun, 
 Zhanxing Zhu, and <u>Zhouchen Lin</u>, <em>Multi-Stage Self-Supervised Learning 
 for Graph Convolutional Networks</em>, submitted to Machine Learning. 
 </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">111. Qigong Sun, Xiufang Li, Fanhua Shang, 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">112. Qigong Sun, Xiufang Li, Fanhua Shang, 
 Hongying Liu, Kang Yang, Licheng Jiao, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen 
 Lin</u></span>, <em>Model  Decomposition and Acceleration for Quantized Neural 
 Network</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">submitted to 
 IEEE Trans. Pattern Analysis and Machine Intelligence, major revision</span>. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">110. Huan Li, Cong Fang, WotaoYin, and 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">111. Huan Li, Cong Fang, WotaoYin, and 
     <u>Zhouchen Lin</u>, <em>Near Optimal Complexities of Distributed Accelerated 
 Gradient Method</em>, submitted to IEEE Trans. Automatic Control.</span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">109. Jianlong Wu, <u>Zhouchen Lin</u>, and 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">110. Jianlong Wu, <u>Zhouchen Lin</u>, and 
 Hongbin Zha, <em>Reconstruction Regularized Cross-Modal Subspace Learning</em>, 
 submitted to IEEE Trans. Multimedia. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">108. Huan Li, Cong 
+<p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">109. Huan Li, Cong 
 Fang, and <u>Zhouchen Lin</u>, <em>Convergence Rates Analysis of the Quadratic 
 Penalty Method and Its Applications to Decentralized Distributed 
 Optimization</em>, submitted to SIAM J. Optimization. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">108. Yuanyuan Liu,  Fanhua Shang, Hongying Liu, 
+  Lin Kong, Licheng Jiao, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen Lin</u></span>, <em>Accelerated Variance Reduction Stochastic ADMM for Large-Scale Machine 
+    Learning</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">submitted to 
+      IEEE Trans. Pattern Analysis and Machine Intelligence, accpted. [<a href="Publications/2020-TPAMI-ASVRG-ADMM.pdf">pdf</a>]</span></span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">107. Huan Li and <u>Zhouchen Lin</u>, <em>Revisiting EXTRA for Smooth Distributed Optimization</em>, SIAM 
   J. Optimization, accepted. [<a href="Publications/2020-SIAM-EXTRA.pdf">pdf</a>] </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -2891,7 +2890,7 @@ Optimization</em>, submitted to SIAM J. Optimization. </span></p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">105. <u>Zhouchen Lin</u>, <em>How Can Machine Learning and Optimization Help Each Other Better? </em>Journal of the Operations Research Society of China, accepted. [<a href="Publications/2019-ML&Opt.pdf">pdf</a>]</span></p>
 <p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">104. Risheng Liu, Shichao Cheng, Yi He, Xin Fan, <u>Zhouchen Lin</u>, and Zhongxuan Luo, <em>On the Convergence of Learning-Based Interative Methods for Nonconvex Inverse Problems, </em>IEEE Trans. Pattern Analysis and Machine Intelligence, accepted.</span><span class="STYLE12"> [<a href="https://zhouchenlin.github.io/Publications/2019-TPAMI-FIMA.pdf">pdf</a>] 
+<p class="MsoNormal12311" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">104. Risheng Liu, Shichao Cheng, Yi He, Xin Fan, <u>Zhouchen Lin</u>, and Zhongxuan Luo, <em>On the Convergence of Learning-Based Iterative Methods for Nonconvex Inverse Problems, </em>IEEE Trans. Pattern Analysis and Machine Intelligence, accepted.</span><span class="STYLE12"> [<a href="https://zhouchenlin.github.io/Publications/2019-TPAMI-FIMA.pdf">pdf</a>] 
 </span></p>
 <p class="MsoNormal1231177" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231175" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">103. Canyi Lu, 
@@ -4628,7 +4627,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Apr. 30, 2020. Number of visitors since March 1, 2010:     
+was last updated on May 25, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
