--- a/index.html
+++ b/index.html
@@ -2879,7 +2879,7 @@ Optimization</em>, submitted to SIAM J. Optimization. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">108. Yuanyuan Liu,  Fanhua Shang, Hongying Liu, 
   Lin Kong, Licheng Jiao, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen Lin</u></span>, <em>Accelerated Variance Reduction Stochastic ADMM for Large-Scale Machine 
     Learning</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">submitted to 
-      IEEE Trans. Pattern Analysis and Machine Intelligence, accpted. [<a href="Publications/2020-TPAMI-ASVRG-ADMM.pdf">pdf</a>]</span></span></p>
+      IEEE Trans. Pattern Analysis and Machine Intelligence, accepted. [<a href="Publications/2020-TPAMI-ASVRG-ADMM.pdf">pdf</a>]</span></span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">107. Huan Li and <u>Zhouchen Lin</u>, <em>Revisiting EXTRA for Smooth Distributed Optimization</em>, SIAM 
   J. Optimization, accepted. [<a href="Publications/2020-SIAM-EXTRA.pdf">pdf</a>] </span></p>
@@ -3501,8 +3501,7 @@ Zhisheng Zhong, Jianlong Wu, Yibo Yang, <u>Zhouchen Lin</u> and Hong Liu,
 ICCV 2019, oral. [<a href="https://zhouchenlin.github.io/Publications/2019-ICCV-EMA-net.pdf">pdf</a>]</span></p>
 <p class="MsoNormal264131" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal264131" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal264131" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">94. <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">Tiancheng 
-Shen, Xia Li, Jianlong Wu, Zhisheng Zhong, and <u>Zhouchen Lin</u>, <em>R^2 
--Net: Recurrent and Recursive Network for Sparse-view CT Artifacts Removal</em>, 
+Shen, Xia Li, Jianlong Wu, Zhisheng Zhong, and <u>Zhouchen Lin</u>, <em>R^2-Net: Recurrent and Recursive Network for Sparse-view CT Artifacts Removal</em>, 
 MICCAI 2019</span>. [<a href="https://zhouchenlin.github.io/Publications/2019-MICCAI-R2-Net.pdf">pdf</a>]</span></span></p>
 <p class="MsoNormal264131" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal2641314" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal264131" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">93. Cong Fang, <span class="STYLE2"><u>Zhouchen Lin</u></span>, and Tong Zhang, <em>Sharp Analysis 
@@ -3622,7 +3621,7 @@ Huang, <em>Relay Backpropagation for Effective Learning of Deep Convolutional
 Neural Networks</em>, ECCV 2016. [<a href="https://zhouchenlin.github.io/Publications/2016-ECCV-RelayBP.pdf">pdf</a>] 
 </p>
 <p style="margin-bottom: 0pt;">69. Yuqing Hou, <u>Zhouchen Lin</u>, and Jinge 
-Yao. <em>Subspace Clustering Based Tag Sharing for Inductive Tag  Matrix 
+Yao, <em>Subspace Clustering Based Tag Sharing for Inductive Tag  Matrix 
 Refinement with Complex Errors</em>, pp. 1013-1016, SIGIR 2016. [<a href="https://zhouchenlin.github.io/Publications/2016-SIGIR-SC_Tagging.pdf">pdf</a>]</p>
 <p style="margin-bottom: 0pt;">68. Canyi Lu, Jiashi Feng, Yudong chen, Wei Liu, 
 <u>Zhouchen Lin</u>, and Shuicheng Yan, <em>Tensor Robust Principal Component 
