--- a/Check List before Handing in Your Thesis.html
+++ b/Check List before Handing in Your Thesis.html
@@ -10,6 +10,7 @@
 <ol>
   <li>Follow the parts in the <a href="https://zhouchenlin.github.io/Check%20List%20before%20Handing%20in%20Your%20Paper.htm">Check  List before Handing in Your Papers</a> that fits for a Chinese thesis.</li>
   <li>Reduce the use of English as  much as possible, unless the terminology is a well-accepted acronym. You may  write Chinese first and explain it right after it in English when the  terminology first appears. For example, &ldquo;主成分分析（Principal  Component Analysis, PCA）&rdquo;. Note that reduce English not only in body texts, but also in  figures and tables.</li>
+  <li>Avoid using  &ldquo;我们&rdquo;. Use  &ldquo;本文&rdquo; instead.</li>
   <li>Each math equation should end  with either comma or period (in English style), depending whether the sentence  ends there. If the content right following the math equation is to continue the  sentence, it must not start a paragraph, i.e., there must not be indention at  the beginning of the content.</li>
   <li>For brackets and norms in math  expressions, $\left$ and $\right$ should be used in order to enclose the math  expression in between.</li>
   <li>The reference to equation  number should include parentheses, e.g., &ldquo;(2.1)&rdquo; rather than &ldquo;2.1&rdquo;.</li>
