--- a/index.html
+++ b/index.html
@@ -2602,7 +2602,7 @@ reference book</a>). Welcome to send me (zlin (at) <span class="GramE">pku</span
     <td width="164" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td></tr>
   <tr align="left">
     <td height="82">
-      <p class="WordSection1">2. One paper accepted to CVPR 2020! One paper accepted to JMLR! </p></td>
+      <p class="WordSection1">2. Four papers accepted to ICML 2020! One paper accepted to JMLR! </p></td>
     </tr>
   <tr align="left">
     <td height="78">
@@ -3459,16 +3459,23 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">107. Two papers 
-submitted to ECML/PAKDD 2020.</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">111. 17 papers submitted to NeurIPS 2020.</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">106. Four papers 
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">110. Two papers 
+  submitted to ECML/PAKDD 2020.</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">109. Four papers 
   submitted to ECCV 2020.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">105. Twelve papers 
-submitted to ICML 2020.</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">108. Mingjie Li, Lingshen He, and <u>Zhouchen Lin</u>, Implicit Euler Skip Connections: Enhancing Adversarial Robustness via Numerical Stability, ICML 2020. [<a href="Publications/2020-ICML-Implicit_Euler">pdf</a>][<a href="Publications/2020-ICML-Implicit_Euler_Supp.pdf">supplementary material</a>]</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">104. Xia Li, Yibo Yang, Qijie Zhao, Tiancheng Shen, <u>Zhouchen Lin</u>, and Hong Liu, <em>Spatial Pyramid Based Graph Reasoning for Semantic Segmentation</em>, CVPR 2020. [<a href="Publications/2020-CVPR-SpyGR.pdf">pdf</a>]</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">07. Xingyu Xie, Hao Kong, Jianlong Wu, Wayne Zhang, Guangcan Liu, and <u>Zhouchen Lin</u>, Maximum-and-Concatenation Networks, ICML 2020. [<a href="Publications/2020-ICML-MCN.pdf">pdf</a>]</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">06. Zhengyang Shen, Lingshen He, <u>Zhouchen Lin</u>, and Jinwen Ma, PDO-eConvs: Partial Differential Operator Based Equivariant Convolutions, ICML 2020. [<a href="Publications/2020-ICML-PDO-eConvs.pdf">pdf</a>][<a href="Publications/2020-ICML-PDO-eConvs_Supp.pdf">supplementary material</a>]</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">05. Yuchao Cai, Hanyuan Hang, Hanfang Yang, and <u>Zhouchen Lin</u>, Boosted Histogram Transform for Regression, ICML 2020. [<a href="Publications/2020-ICML-BHTR.pdf">pdf</a>][<a href="Publications/2020-ICML-BHTR_Supp.pdf">supplementary material</a>]</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">04. Xia Li, Yibo Yang, Qijie Zhao, Tiancheng Shen, <u>Zhouchen Lin</u>, and Hong Liu, <em>Spatial Pyramid Based Graph Reasoning for Semantic Segmentation</em>, CVPR 2020. [<a href="Publications/2020-CVPR-SpyGR.pdf">pdf</a>]</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">103. Yueying Kao, Weiming Li, QiangWang, <u>Zhouchen Lin</u>, Wooshik Kim, and Sunghoon Hong, <em>Synthetic Depth Transfer for Monocular 3D Object Pose Estimation in the Wild</em>, AAAI 2020. [<a href="https://zhouchenlin.github.io/Publications/2020-AAAI-SDT.pdf">pdf</a>] </span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4626,7 +4633,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on May 25, 2020. Number of visitors since March 1, 2010:     
+was last updated on June 8, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
