--- a/index.html
+++ b/index.html
@@ -2606,7 +2606,7 @@ reference book</a>). Welcome to send me (zlin (at) <span class="GramE">pku</span
     </tr>
   <tr align="left">
     <td height="78">
-      <p class="WordSection1">3. I was invited to be area chairs of  ACML 2020, ICML 2020, IJCAI 2020, NIPS 2020, and CVPR 2021!</p></td>
+      <p class="WordSection1">3. I was invited to be area chairs of  ACML 2020, NIPS 2020, ICLR 2021, and CVPR 2021!</p></td>
     </tr>
   <tr align="left">
     <td height="73">
@@ -2850,7 +2850,7 @@ Papers:   <o:p></o:p></span></u></b></p>
 Chao Xu, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen 
 Lin</u></span>, <em>Training Deep Neural Networks by Lifted Proximal Operator 
 Machines</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">submitted to 
-IEEE Trans. Pattern Analysis and Machine Intelligence, major revision</span>. </span></p>
+IEEE Trans. Pattern Analysis and Machine Intelligence, minor revision</span>. </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12"></span><span class="STYLE12">113. Ke Sun, 
 Zhanxing Zhu, and <u>Zhouchen Lin</u>, <em>Multi-Stage Self-Supervised Learning 
@@ -3459,7 +3459,9 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">111. 17 papers submitted to NeurIPS 2020.</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">112. Two paper submitted to ICDM2020.</span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">11. 17 papers submitted to NeurIPS 2020.</span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">110. Two papers 
   submitted to ECML/PAKDD 2020.</span></span></p>
@@ -4175,7 +4177,7 @@ granted)</span></p>
 *</span>(ZL201410084319.7) 基于低秩全局几何一致性检验的错误匹配检测方法</p>
 <p>2. *(ZL201410084657.0) 基于L1范数全局几何一致性检验的错误匹配检测方法</p>
 <p>3. *(ZL201510888480.4) 一种基于形状交互矩阵的图像错误匹配检验方法</p>
-<p>4. (201710623220.3) 基于维度自适应的Tucker分解的深度网络压缩方法</p>
+<p>4. *(ZL201710645965.X) 基于维度自适应的Tucker分解的深度网络压缩方法</p>
 <p>5. *(ZL201711007628.4) 基于增广齐次坐标矩阵的图像间错误匹配的检测方法</p>
 <p>6. (201711156691.4) 一种提升邻近算子机神经网络优化方法</p>
 <p>7. (201810958553.6) 一种受优化算法启发的深度神经网络结构设计方法</p>
@@ -4250,7 +4252,7 @@ Photogrammetric Engineering and Remote Sensing, </span><span style="mso-ascii-fo
  (Series E)] <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">19. 
 Reviewers/Chairs to Conferences:   <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  CVPR 2021 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
 (<strong>Area Chair</strong>), ACML 2020 (<strong>Area Chair</strong>), NIPS 
 2020 (<strong>Area Chair</strong>), ICPR 2020 (<strong>Track Chair</strong>), ICML 2020 (<strong>Area Chair</strong>), IJCAI 2020 (<strong>Area Chair</strong>), CVPR 2020 
 (<strong>Area Chair</strong>), AAAI 2020 (<strong>Area Chair</strong>), NIPS 
@@ -4633,7 +4635,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on June 8, 2020. Number of visitors since March 1, 2010:     
+was last updated on June 12, 2020. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
